--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-awesome-slider": "^4.1.0",
+    "react-dom": "18.0.0",
+    "react-modal": "^3.15.1"
   },
   "devDependencies": {
     "@types/node": "17.0.27",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
