--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.3.3",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-awesome-slider": "^4.1.0",
     "react-dom": "18.0.0",
     "react-modal": "^3.15.1"
   },
